# xsocial-testnet

./: .gitignore  Cargo.toml  Dockerfile
node/: Cargo.toml
node/cli/: Cargo.toml
node/cli/src/: benchmarking.rs  chain_spec.rs  command.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/primitives/: Cargo.toml
node/res/: xsocial.json
node/rpc/: Cargo.toml
node/rpc/src/: lib.rs
node/src/: aleph_node_rpc.rs  benchmarking.rs  chain_spec.rs  cli.rs  command.rs  executor.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/collator-selection/: Cargo.toml
pallets/collator-selection/src/: lib.rs
pallets/permissions/src/: types.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build-runtime.sh  init.sh  manual-compare-ordering.sh  try-runtime.sh
