[package]
name = "xsocial-runtime"
version = "0.2.1"
description = "XSocial parachain runtime."
authors = ["DappForce <dappforce@pm.me>"]
homepage = "https://subsocial.network"
edition = "2021"
publish = false
repository = "https://github.com/dappforce/xsocial-testnet/"
license = "GPL-3.0-only"
keywords = ["blockchain", "cryptocurrency", "social-network", "news-feed", "marketplace"]
categories = ["cryptography::cryptocurrencies"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-proxy = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-utility = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-try-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.37" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# Used for the node's RPCs
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# Used for runtime benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.37" }
frame-system-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.37" }

# Local Dependencies
pallet-account-follows = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", rev = "a9a66fa515d241947c393084f5e69034bea10ce0" }
pallet-domains = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", rev = "a9a66fa515d241947c393084f5e69034bea10ce0" }
pallet-energy = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", rev = "a9a66fa515d241947c393084f5e69034bea10ce0" }
pallet-free-proxy = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", rev = "a9a66fa515d241947c393084f5e69034bea10ce0" }
pallet-permissions = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-post-follows = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-posts = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-profiles = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-reactions = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
# FIXME: change when merged to main
pallet-resource-discussions = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-roles = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-space-follows = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-space-ownership = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-spaces = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
# FIXME: change when merged to main
pallet-evm-addresses = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "dev/evm-linking" }

subsocial-support = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }
pallet-posts-rpc-runtime-api = { default-features = false, git = "https://github.com/dappforce/subsocial-parachain.git", branch = "tmp/resource-discussions" }

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate.git", optional = true, branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
    "frame-try-runtime?/std",
    "frame-system-benchmarking?/std",
    "frame-benchmarking?/std",
    "codec/std",
    "scale-info/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-proxy/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",
	"pallet-account-follows/std",
	"pallet-domains/std",
	"pallet-energy/std",
	"pallet-free-proxy/std",
	"pallet-permissions/std",
	"pallet-post-follows/std",
	"pallet-posts/std",
	"pallet-profiles/std",
	"pallet-reactions/std",
	"pallet-resource-discussions/std",
	"pallet-roles/std",
	"pallet-space-follows/std",
	"pallet-space-ownership/std",
	"pallet-spaces/std",
	"pallet-evm-addresses/std",
	"subsocial-support/std",
	"pallet-posts-rpc-runtime-api/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-proxy/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-utility/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
	"pallet-domains/runtime-benchmarks",
	"pallet-energy/runtime-benchmarks",
	"pallet-free-proxy/runtime-benchmarks",
	"pallet-reactions/runtime-benchmarks",
	"pallet-resource-discussions/runtime-benchmarks",
	"pallet-roles/runtime-benchmarks",
	"pallet-space-follows/runtime-benchmarks",
	"pallet-space-ownership/runtime-benchmarks",
	"pallet-spaces/runtime-benchmarks",
	"pallet-post-follows/runtime-benchmarks",
	"pallet-posts/runtime-benchmarks",
	"pallet-profiles/runtime-benchmarks",
	"pallet-evm-addresses/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-proxy/try-runtime",
    "pallet-randomness-collective-flip/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-utility/try-runtime",
    "pallet-permissions/try-runtime",
    "pallet-spaces/try-runtime",
    "pallet-roles/try-runtime",
    "pallet-space-follows/try-runtime",
    "pallet-post-follows/try-runtime",
    "pallet-posts/try-runtime",
    "pallet-energy/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
	"pallet-account-follows/try-runtime",
	"pallet-domains/try-runtime",
	"pallet-energy/try-runtime",
	"pallet-free-proxy/try-runtime",
	"pallet-permissions/try-runtime",
	"pallet-posts/try-runtime",
	"pallet-profiles/try-runtime",
	"pallet-reactions/try-runtime",
	"pallet-resource-discussions/try-runtime",
	"pallet-roles/try-runtime",
	"pallet-space-follows/try-runtime",
	"pallet-space-ownership/try-runtime",
	"pallet-spaces/try-runtime",
	"pallet-evm-addresses/try-runtime",
]
